k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtm-web-svc
  namespace: kazy-prod
spec:
  selector: { app: mtm-web }
  ports:
    - port: 80
      targetPort: 80
