k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtm-ing
  namespace: kazy-prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    # Rewrite /api/<anything> -> /fineract-provider/<same-anything>
    nginx.ingress.kubernetes.io/rewrite-target: /fineract-provider/$2
spec:
  ingressClassName: public
  tls:
    - hosts: [ "mtm.kazy.co.tz" ]
      secretName: kazy-co-tz-tls
  rules:
    - host: mtm.kazy.co.tz
      http:
        paths:
          # Front-end SPA
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mtm-web-svc
                port: { number: 80 }

          # API proxy to Fineract
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: fineract-server
                port: { number: 8080 }
